--- a/JeevanAPP/package.json
+++ b/JeevanAPP/package.json
@@ -25,9 +25,11 @@
     "expo-file-system": "~19.0.15",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
+    "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-location": "~19.0.7",
+    "expo-permissions": "^14.4.0",
     "expo-router": "~6.0.8",
     "expo-speech": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
@@ -47,6 +49,7 @@
     "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.21.0",
+    "react-native-webrtc": "^124.0.6",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "^0.6.0"
   },
